--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,92 @@
 @charset "utf-8";
 /* CSS Document */
 
+
+@media screen and (max-width: 450px) {
+  select {
+    width: 90%;
+  }
+
+  nav h1 a {
+    font-size: 12px !important;
+    letter-spacing: 2px !important;
+    text-transform: uppercase;
+  }
+
+  #restaurants-list li {
+    width: 100%;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    font-family: Arial,sans-serif;
+    text-align: left;    
+  }
+  #restaurants-list .restaurant-img {
+    background-color: #ccc;
+    display: block;
+    margin: 0;
+    max-width: 100%;
+  }  
+}
+
+@media screen and (min-width: 451px) and (max-width: 775px) {
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   }
+
+#restaurants-list li 
+  {
+    background-color: #fff;
+    border: 2px solid #ccc;
+    font-family: Arial,sans-serif;
+    margin: 15px;
+    min-height: 380px;
+    padding: 0 30px 25px;
+    text-align: left;
+    width: 350px;
+  }
+  #restaurants-list .restaurant-img {
+    background-color: #ccc;
+    display: block;
+    margin: 0;
+    max-width: 100%;
+    min-height: 248px;
+    min-width: 100%;
+  }    
+}
+
+
+@media screen and (min-width: 776px) {
+  ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+     }
+
+  #restaurants-list li 
+    {
+      background-color: #fff;
+      border: 2px solid #ccc;
+      font-family: Arial,sans-serif;
+      margin: 15px;
+      min-height: 380px;
+      padding: 0 30px 25px;
+      text-align: left;
+      width: 270px;
+    }
+    #restaurants-list .restaurant-img {
+      background-color: #ccc;
+      display: block;
+      margin: 0;
+      max-width: 100%;
+      min-height: 248px;
+      min-width: 100%;
+    }    
+}
+
+
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -15,7 +101,7 @@ body {
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
-	color: #333;
+  color: #333;
 }
 a {
 	color: orange;
@@ -57,6 +143,7 @@ nav {
 }
 nav h1 {
   margin: auto;
+  padding-top: 10px;
 }
 nav h1 a {
   color: #fff;
@@ -106,16 +193,19 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   background-color: #3397DB;
   align-items: center;
+  text-align:center;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding-top: 10px;
 }
 .filter-options select {
   background-color: white;
@@ -126,7 +216,7 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  min-width: 200px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -136,24 +226,6 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
-}
-#restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
-}
-#restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
