Restaurant Page Responsiveness
Made the restaurant.html page initially responsive.  One error with the nav element does exist.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 
 /* 
+Index and Shared Media Queries
 Adding fluid breakpoints at 450-451 pixels and 775-776 pixels
 "Mobile" (max 450) view is under 450 and does not use any grid
 "Tablet" (max 775) view introduces flexgrid with wide listings
@@ -36,7 +37,7 @@ Adding fluid breakpoints at 450-451 pixels and 775-776 pixels
 }
 /* Tablet */
 @media screen and (min-width: 451px) and (max-width: 775px) {
-  ul {
+  main ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -64,7 +65,7 @@ Adding fluid breakpoints at 450-451 pixels and 775-776 pixels
 }
 /* Desktop */
 @media screen and (min-width: 776px) {
-  ul {
+  main ul {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -259,8 +260,169 @@ nav h1 a {
   text-decoration: none;
   text-transform: uppercase;
 }
+#restaurant-img {
+  width: 100%;
+}
+
+
+
 
 /* ====================== Restaurant Details ====================== */
+@media screen and (max-width: 750px) {
+  
+  .inside #map {
+    width: 100%;
+  }
+  #restaurant-name {
+    padding-top: 20px;
+  }
+  #restaurant-img {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    max-height: 300px;
+  }
+  #restaurant-cuisine {
+    background-color: #333;
+    color: #ddd;
+    font-size: 12pt;
+    font-weight: 300;
+    letter-spacing: 10px;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+  }
+
+  #reviews-container h2 {
+    color: #f58500;
+    font-size: 24pt;
+    font-weight: 300;
+    letter-spacing: -1px;
+    padding-bottom: 1pt;
+    padding-top: 20px;
+  }
+  #reviews-list {
+    margin: 0;
+    padding: 0;
+  }
+  #reviews-list li {
+    background-color: #fff;
+      border: 2px solid #f3f3f3;
+    display: block;
+    list-style-type: none;
+    margin: 0 0 30px;
+    overflow: hidden;
+    padding: 0 20px 20px;
+    position: relative;
+    width: 85%;
+  }
+  #reviews-list li p {
+    margin: 0 0 10px;
+  }
+}
+
+@media screen and (min-width: 751px) {
+  .inside header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  .inside #map-container {
+    background: blue none repeat scroll 0 0;
+    height: 87%;
+    position: fixed;
+    right: 0;
+    top: 80px;
+    width: 50%;
+  }
+  #restaurant-img {
+    width: 100%;
+  }
+  .inside #map {
+    background-color: #ccc;
+    height: 100%;
+    width: 100%;
+  }
+  .inside #footer {
+    bottom: 0;
+    /*position: absolute;*/
+    width: 50%;
+  }
+  #restaurant-container {
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 140px 40px 30px 0px;
+    width: 50%;
+  }
+
+  #reviews-container {
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 40px 40px 100px 0px;
+    width: 50%;
+  }
+  
+  #reviews-container h2 {
+    color: #f58500;
+    font-size: 24pt;
+    font-weight: 300;
+    letter-spacing: -1px;
+    padding-bottom: 1pt;
+  }
+  #reviews-list {
+    margin: 0;
+    padding: 0;
+  }
+  #reviews-list li {
+    background-color: #fff;
+      border: 2px solid #f3f3f3;
+    display: block;
+    list-style-type: none;
+    margin: 10px 10px;
+    overflow: hidden;
+    padding: 10px;
+    position: relative;
+    width: 85%;
+  }
+  #reviews-list li p {
+    margin: 10 10 10 10px;
+  }
+  #restaurant-cuisine {
+    background-color: #333;
+    color: #ddd;
+    font-size: 12pt;
+    font-weight: 300;
+    letter-spacing: 10px;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+  } 
+}
+#restaurant-name {
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 20pt;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 15px 0 30px;
+  text-transform: uppercase;
+  line-height: 1.1;
+}
+#restaurant-address {
+  font-size: 12pt;
+  margin: 10px 0px;
+}
+#restaurant-hours td {
+  color: #666;
+}
+
+
+/* Preserving all of the original restaurants.html CSS for good measure, wouldn't do in production
 .inside header {
   position: fixed;
   top: 0;
@@ -351,3 +513,4 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+*/
