--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ nav h1 a {
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
-    background-color: #eee;
+    background-color: #fff;
     font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
@@ -269,7 +269,6 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 @media screen and (max-width: 750px) {
-  #breadcrumb {width:100%;}
   .inside #map {
     width: 100%;
   }
